--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 
 body {
-    background-color: rgb(200,200,200);
+    background-color: rgb(67, 175, 5);
     color: rgb(0,0,0);
     font-family: "Open Sans", sans-serif;
     text-align: center;
-}
 
 #content {
     display: block;
